--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "private": true,
-  "name": "ghost-cache-purge",
+  "name": "ghost-cloudflare-cache-purge",
   "version": "1.0.0",
-  "description": "A Cloudflare Worker to purge cached pages when a post is updated.",
+  "description": "A Cloudflare Worker to purge cached pages when a post is updated or created on multiple Ghost blogs",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write '**/*.{js,css,json,md}'"
   },
-  "author": "milgradesec <38557680+milgradesec@users.noreply.github.com>",
+  "author": "ltoinel <ludovic@toinel.com>",
   "license": "MIT",
   "devDependencies": {
     "prettier": "^2.5.1"
